# o4t

./: .gitignore  Cargo.toml  README.md  log.txt
src/: app.rs  cli.rs  config.rs  main.rs  theme.rs  ui.rs  words.rs  wrap.rs
